ci(build): also mention link to watch

--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -23,7 +23,9 @@ jobs:
           webhook: ${{ secrets.LOG_HOOK }}
           title: rovr docs build starting!
           color: 0xFFFF00
-          description: "Docs Build started due to ${{ github.event_name }}"
+          description: |
+            Docs Build started due to ${{ github.event_name }}"
+            -# watch changes at https://github.com/NSPC911/rovr/actions/runs/${{ github.run_id }}
           avatar_url: "https://avatars.githubusercontent.com/u/176916861?v=4"
           username: "NSPBot911"
           nodetail: true
