--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,4 +1,4 @@
-name: Formatting
+name: Post Commit Checks and Pushes
 
 on:
   push:
@@ -49,6 +49,26 @@ jobs:
           git add .
           if ! git diff --cached --quiet; then
             git commit -m "style: auto-format with ruff" -m "[skip ci]" -m "$(git log -1 --pretty=format:'%an') forgot to run ruff format" -m "skip-checks: true"
+            git push
+          fi
+        env:
+          GITHUB_ACTOR_NAME: ${{ vars.BOT_NAME || 'NSPBot911' }}
+          GITHUB_ACTOR_EMAIL: ${{ vars.BOT_EMAIL || '176916861+NSPBot911@users.noreply.github.com' }}
+
+      - name: Run docs scripts
+        run: |
+          uv run poe gen-schema
+          uv run poe gen-keys
+          uv run poe typed
+
+      - name: Commit and push changes if needed (main repo)
+        if: github.repository == env.MAIN_REPO && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
+        run: |
+          git config --global user.name "${GITHUB_ACTOR_NAME:-NSPBot911}"
+          git config --global user.email "${GITHUB_ACTOR_EMAIL:-176916861+NSPBot911@users.noreply.github.com}"
+          git add .
+          if ! git diff --cached --quiet; then
+            git commit -m "docs: generate things" -m "[skip ci]" -m "$(git log -1 --pretty=format:'%an') forgot to run some scripts" -m "skip-checks: true"
             git push
           fi
         env:
