--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ build = [
   "poethepoet>=0.38.0",
 ]
 dev = [
+  "poethepoet>=0.38.0",
   "prek>=0.2.25",
   "ruff>=0.14.10",
   "textual-dev>=1.7.0",
