--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   format_and_push_changes:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     if: github.event_name != 'pull_request'
     steps:
       - name: Checkout code
@@ -56,7 +56,7 @@ jobs:
           GITHUB_ACTOR_EMAIL: ${{ vars.BOT_EMAIL || '176916861+NSPBot911@users.noreply.github.com' }}
 
   format_and_alert:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     if: github.event_name == 'pull_request'
     steps:
       - name: Checkout code
